[package]
name = "embedded-keypad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-digi = { version = "0.1.0", git = "https://github.com/traverse1984/embedded-digi" }